--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "theme-toggle-button",
-  "version": "0.0.0",
-  "main": "dist/my-element.es.js",
+  "version": "0.1.0",
+  "main": "dist/theme-toggle-button.es.js",
   "exports": {
-    ".": "./dist/my-element.es.js"
+    ".": "./dist/theme-toggle-button.es.js"
   },
-  "types": "types/my-element.d.ts",
+  "types": "types/theme-toggle-button.d.ts",
   "files": [
     "dist",
     "types"
