--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "theme-toggle-button",
-  "version": "0.1.4",
+  "name": "@jaydanurwin/theme-toggle-button",
+  "version": "0.1.0",
   "author": {
     "name": "Jaydan Urwin",
     "email": "hello@jaydanurwin.com",
