--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
   "devDependencies": {
     "vite": "^2.6.0",
     "typescript": "^4.3.2"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
