--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "lit": "^2.0.0"
   },
   "devDependencies": {
-    "vite": "^2.6.0",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.2",
+    "vite": "^2.6.0"
   },
   "publishConfig": {
     "access": "public"
